# shopfloor-cmms

./: .dockerignore  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEMO.md  EXECUTION-PLAYBOOK.md  REQUIREMENTS.md  ui-spec.md
docs/domain-model/: 01-assets.md  02-work-orders.md  03-scheduled-activity.md  04-inventory.md  05-tasks.md  06-contacts.md  07-attachments.md  08-failure-vocab.md
infra/: secrets-manifest.md
infra/hermes/: Dockerfile  README.md  entrypoint.sh  fly.hermes.toml
infra/pm-scheduler/: README.md
infra/postgres/: Dockerfile  README.md  fly.pg.toml
migrations/: env.py
migrations/versions/: .gitkeep  20260620_0001_assets.py  20260620_0002_tasks.py  20260621_0003_pm_schedule.py  20260621_0004_work_orders.py  20260621_0005_inventory.py  20260622_0006_contacts.py  20260622_0007_work_order_write.py  20260622_0008_work_order_gated_write.py  20260625_0009_asset_composition.py  20260628_0010_attachments.py  20260701_0013_identity.py  (+24 more)
scripts/: assign_demo_owners.py  generate_demo_data.py  seed_demo.ps1  seed_demo.sh  seed_demo_proposals.py
tests/: test_active_in_db.py  test_active_in_route.py  test_asset_composition_db.py  test_asset_composition_transform.py  test_assets_db.py  test_assistant_conversation_db.py  test_assistant_render.py  test_attachment_db.py  test_attachment_transform.py  test_contacts_db.py  test_contacts_transform.py  test_contract_active_in_fixture.py  test_contract_failure_vocab_fixture.py  test_contract_fixture.py  test_contract_hold_reason_vocab_fixture.py  test_credential_vault_db.py  test_downtime_semantics.py  test_efc_crosscheck.py  test_export_db.py  test_external_link_db.py  test_failure_vocab_db.py  test_failure_vocab_transform.py  test_feedback_db.py  test_hermes_gateway.py  test_identity_admin_db.py  test_identity_db.py  test_inventory_db.py  test_inventory_transform.py  test_issue_charge_target_db.py  test_jira_forwarder.py  test_jira_sync_db.py  test_mcp_http.py  test_notify_db.py  test_notify_render.py  test_onbox_verify.py  test_operator_rbac_db.py  test_part_issue_backfill_db.py  test_part_issue_backfill_transform.py  test_pm_generation_db.py  test_pm_generation_transform.py  (+24 more)
(+177 files in other folders)
